--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -18,10 +18,16 @@ jobs:
         env:
           # We split requests across a couple of different GitHub Apps
           GH_APP_ID_1: ${{ vars.GH_APP_ID_1 }}
+          GH_APP_ID_2: ${{ vars.GH_APP_ID_2 }}
+          GH_APP_ID_3: ${{ vars.GH_APP_ID_3 }}
           GH_APP_INSTALLATION_ID_1: ${{ vars.GH_APP_INSTALLATION_ID_1 }}
+          GH_APP_INSTALLATION_ID_2: ${{ vars.GH_APP_INSTALLATION_ID_2 }}
+          GH_APP_INSTALLATION_ID_3: ${{ vars.GH_APP_INSTALLATION_ID_3 }}
           GH_APP_PRIVATE_KEY_1: ${{ secrets.GH_APP_PRIVATE_KEY_1 }}
+          GH_APP_PRIVATE_KEY_2: ${{ secrets.GH_APP_PRIVATE_KEY_2 }}
+          GH_APP_PRIVATE_KEY_3: ${{ secrets.GH_APP_PRIVATE_KEY_3 }}
         run: |
-          seq 2025 $(date '+%Y') | parallel -j1 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos "stars:>=100 created:{}-01-01T00:00:00Z..{}-12-31T23:59:59Z" > {}.csv'
+          seq 2007 $(date '+%Y') | parallel -j3 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos "stars:>=100 created:{}-01-01T00:00:00Z..{}-12-31T23:59:59Z" > {}.csv'
       - name: Merge
         run: |
           echo "name,stars,created_at,pushed_at" > top.csv
