--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,7 +30,7 @@ jobs:
           seq 2007 $(date '+%Y') | parallel --line-buffer --jobs=3 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos "stars:>=100 created:{}-01-01T00:00:00Z..{}-12-31T23:59:59Z" > {}.csv'
       - name: Merge
         run: |
-          echo "owner,name,id,stars,forks,size,created_at,updated_at,pushed_at,archived_at,description,homepage_url" > top.csv
+          echo "owner,name,id,stars,forks,size,created_at,updated_at,pushed_at,archived_at" > top.csv
           sort --field-separator=, --numeric-sort --reverse --key=4 20*.csv >> top.csv
           head -n101 top.csv > top-100.csv
           head -n1001 top.csv > top-1000.csv
