--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,14 +20,20 @@ jobs:
           GH_APP_ID_1: ${{ vars.GH_APP_ID_1 }}
           GH_APP_ID_2: ${{ vars.GH_APP_ID_2 }}
           GH_APP_ID_3: ${{ vars.GH_APP_ID_3 }}
+          GH_APP_ID_4: ${{ vars.GH_APP_ID_4 }}
+          GH_APP_ID_5: ${{ vars.GH_APP_ID_5 }}
           GH_APP_INSTALLATION_ID_1: ${{ vars.GH_APP_INSTALLATION_ID_1 }}
           GH_APP_INSTALLATION_ID_2: ${{ vars.GH_APP_INSTALLATION_ID_2 }}
           GH_APP_INSTALLATION_ID_3: ${{ vars.GH_APP_INSTALLATION_ID_3 }}
+          GH_APP_INSTALLATION_ID_4: ${{ vars.GH_APP_INSTALLATION_ID_4 }}
+          GH_APP_INSTALLATION_ID_5: ${{ vars.GH_APP_INSTALLATION_ID_5 }}
           GH_APP_PRIVATE_KEY_1: ${{ secrets.GH_APP_PRIVATE_KEY_1 }}
           GH_APP_PRIVATE_KEY_2: ${{ secrets.GH_APP_PRIVATE_KEY_2 }}
           GH_APP_PRIVATE_KEY_3: ${{ secrets.GH_APP_PRIVATE_KEY_3 }}
+          GH_APP_PRIVATE_KEY_4: ${{ secrets.GH_APP_PRIVATE_KEY_4 }}
+          GH_APP_PRIVATE_KEY_5: ${{ secrets.GH_APP_PRIVATE_KEY_5 }}
         run: |
-          seq 2007 $(date '+%Y') | parallel --line-buffer --jobs=3 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos "stars:>=100 created:{}-01-01T00:00:00Z..{}-12-31T23:59:59Z" > {}.csv'
+          seq 2007 $(date '+%Y') | parallel --line-buffer --jobs=5 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos "stars:>=50 created:{}-01-01T00:00:00Z..{}-12-31T23:59:59Z" > {}.csv'
       - name: Merge
         run: |
           echo "owner,name,id,stars,forks,size,created_at,updated_at,pushed_at,archived_at" > top.csv
