--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,18 +22,27 @@ jobs:
           GH_APP_ID_3: ${{ vars.GH_APP_ID_3 }}
           GH_APP_ID_4: ${{ vars.GH_APP_ID_4 }}
           GH_APP_ID_5: ${{ vars.GH_APP_ID_5 }}
+          GH_APP_ID_6: ${{ vars.GH_APP_ID_6 }}
+          GH_APP_ID_7: ${{ vars.GH_APP_ID_7 }}
+          GH_APP_ID_8: ${{ vars.GH_APP_ID_8 }}
           GH_APP_INSTALLATION_ID_1: ${{ vars.GH_APP_INSTALLATION_ID_1 }}
           GH_APP_INSTALLATION_ID_2: ${{ vars.GH_APP_INSTALLATION_ID_2 }}
           GH_APP_INSTALLATION_ID_3: ${{ vars.GH_APP_INSTALLATION_ID_3 }}
           GH_APP_INSTALLATION_ID_4: ${{ vars.GH_APP_INSTALLATION_ID_4 }}
           GH_APP_INSTALLATION_ID_5: ${{ vars.GH_APP_INSTALLATION_ID_5 }}
+          GH_APP_INSTALLATION_ID_6: ${{ vars.GH_APP_INSTALLATION_ID_6 }}
+          GH_APP_INSTALLATION_ID_7: ${{ vars.GH_APP_INSTALLATION_ID_7 }}
+          GH_APP_INSTALLATION_ID_8: ${{ vars.GH_APP_INSTALLATION_ID_8 }}
           GH_APP_PRIVATE_KEY_1: ${{ secrets.GH_APP_PRIVATE_KEY_1 }}
           GH_APP_PRIVATE_KEY_2: ${{ secrets.GH_APP_PRIVATE_KEY_2 }}
           GH_APP_PRIVATE_KEY_3: ${{ secrets.GH_APP_PRIVATE_KEY_3 }}
           GH_APP_PRIVATE_KEY_4: ${{ secrets.GH_APP_PRIVATE_KEY_4 }}
           GH_APP_PRIVATE_KEY_5: ${{ secrets.GH_APP_PRIVATE_KEY_5 }}
+          GH_APP_PRIVATE_KEY_6: ${{ secrets.GH_APP_PRIVATE_KEY_6 }}
+          GH_APP_PRIVATE_KEY_7: ${{ secrets.GH_APP_PRIVATE_KEY_7 }}
+          GH_APP_PRIVATE_KEY_8: ${{ secrets.GH_APP_PRIVATE_KEY_8 }}
         run: |
-          seq 2007 $(date '+%Y') | parallel --line-buffer --jobs=5 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos --query "stars:>=25 sort:stars-desc" --start "{}-01-01" --end "{}-12-31" > {}.csv'
+          seq 2007 $(date '+%Y') | parallel --line-buffer --jobs=8 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos --query "stars:>=10 sort:stars-desc" --start "{}-01-01" --end "{}-12-31" > {}.csv'
       - name: Merge
         run: |
           echo "owner,name,id,stars,forks,size,created_at,updated_at,pushed_at,archived_at" > all.csv
