--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -59,22 +59,22 @@ jobs:
           git commit -m "Update: $(date) -> Action URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
           git push
       - name: Generate Tag
-        id: tag
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+        run: echo "TAG_NAME=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release create \
             --repo "$GITHUB_REPOSITORY" \
-            --title "${{ steps.tag.outputs.date }}" \
+            --title "$TAG_NAME" \
             --notes "Action URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}" \
             "${{ steps.tag.outputs.date }}"
       - name: Upload Artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          sleep 10
           gh release upload \
             --repo "$GITHUB_REPOSITORY" \
-            "${{ steps.tag.outputs.date }}" \
+            "$TAG_NAME" \
             "all.csv.gz"
