--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -78,7 +78,7 @@ jobs:
           GH_APP_PRIVATE_KEY_19: ${{ secrets.GH_APP_PRIVATE_KEY_19 }}
           GH_APP_PRIVATE_KEY_20: ${{ secrets.GH_APP_PRIVATE_KEY_20 }}
         run: |
-          seq 2007 $(date '+%Y') | parallel --line-buffer --jobs=20 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos --query "stars:>=5 sort:stars-desc" --start "{}-01-01" --end "{}-12-31" > {}.csv'
+          seq 2007 $(date '+%Y') | parallel --line-buffer --jobs=20 'GH_APP_ID=$GH_APP_ID_{%} GH_APP_INSTALLATION_ID=$GH_APP_INSTALLATION_ID_{%} GH_APP_PRIVATE_KEY=$GH_APP_PRIVATE_KEY_{%} ./github-top-repos --query "stars:>1 sort:stars-desc" --start "{}-01-01" --end "{}-12-31" > {}.csv'
       - name: Merge
         run: |
           echo "owner,name,id,stars,forks,size,created_at,updated_at,pushed_at,archived_at" > all.csv
@@ -101,17 +101,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create \
+          gh release view \
             --repo "$GITHUB_REPOSITORY" \
-            --title "$TAG_NAME" \
-            --notes "Action URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}" \
-            "$TAG_NAME"
+            "$TAG_NAME" || \
+              gh release create \
+                --repo "$GITHUB_REPOSITORY" \
+                --title "$TAG_NAME" \
+                --notes "Action URL: ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}" \
+                "$TAG_NAME"
       - name: Upload Artifacts
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           sleep 10
           gh release upload \
+            --clobber \
             --repo "$GITHUB_REPOSITORY" \
             "$TAG_NAME" \
             "all.csv.gz"
